# smtrat

./: README.md
.github/workflows/: CI.yml  cmake.yml  cmake_ubuntu.yml  make_apple.yml
resources/: carl.cmake  resources.cmake
resources/carl/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/smtrat-cadcells/: CMakeLists.txt
